# gateway-template

./: .env.sample  Dockerfile  Makefile  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  docker-compose.yml  install_pg_tools.sh  load_env_vars.fish  post-create.sh  postgres.conf
.github/workflows/: deploy-coolify.yml
app/: brokers.py  hypercorn_config.toml  serve_fastapi.py  serve_faststream.py
app/app/: app_settings.py  asgi.py  celery.py  settings.py  urls.py  views.py
app/appaccount/: admin.py
app/appaccount/migrations/: 0002_user_realtime_exchange_alter_userprofile_gender.py  0003_remove_user_google_uid_account.py
app/appaccount/models/: accounts.py
app/appaccount/routes/: auths.py  users.py
app/appaccount/serializers/: auths.py  users.py
app/appaccount/services/: auths.py
app/appaccount/services/oauth/: google.py
app/appcore/management/commands/: fastapi.py  faststream.py
app/appcore/models/: commons.py
app/appcore/services/: auths.py
app/appdemo/fastapi_routes/: demo.py
app/appdemo/routes/: demos.py
app/appdemo/serializers/: demos.py
app/appfaststream/routes/: demo.py
app/apprealtime/: apps.py
app/apprealtime/fastapi_routes/: electric.py
app/templates/: index.html
playground/: template.py
