[project]
name = "gateway-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.4.0",
    "django>=5.1.7",
    "django-cors-headers>=4.7.0",
    "django-ninja>=1.3.0",
    "django-redis>=5.4.0",
    "faststream[cli,rabbit]>=0.5.39",
    "hypercorn>=0.17.3",
    "psycopg[binary]>=3.2.6",
    "pydantic-settings>=2.8.1",
    "pydantic[email]>=2.10.6",
    "starlette>=0.46.2",
    "whitenoise>=6.9.0",
]
[tool.uv]

[dependency-groups]
dev = [
    "rich>=13.9.4",
]
