[project]
name = "gateway-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.5.3",
    "django>=5.2.3",
    "django-cors-headers>=4.7.0",
    "django-ninja>=1.4.3",
    "django-redis>=6.0.0",
    "fastapi[standard]>=0.115.14",
    "faststream[cli,rabbit]>=0.5.43",
    "httpx>=0.28.1",
    "hypercorn>=0.17.3",
    "logfire[asgi,django,httpx,psycopg]>=3.21.1",
    "psycopg[binary]>=3.2.9",
    "pydantic-settings>=2.10.1",
    "pydantic[email]>=2.11.7",
    "starlette>=0.46.2",
    "websockets>=15.0.1",
    "whitenoise>=6.9.0",
]
[tool.uv]

[dependency-groups]
dev = [
    "rich>=13.9.4",
]
